Fixes overflow in Inventory and Models

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -28,8 +28,9 @@ body {
 .navbar a {
     float: left;
     color: #3A3A3A;
-    border-color: #d1d1d1;
+    border-color: #f1f1f1;
     border-style: hidden solid hidden solid;
+    border-width: 1px;
     text-align: center;
     padding: 14px 16px;
     text-decoration: none;
@@ -198,8 +199,20 @@ body {
     visibility: hidden;
 }
 
-#modelView, #models, #inventory {
+#modelView{
     padding: 0 25px;
+}
+
+#models {
+    padding: 0 25px;
+    max-height: 65%;
+    overflow: auto;
+}
+
+#inventory {
+    padding: 0 25px;
+    max-height: 65%;
+    overflow: auto;
 }
 
 .model-selection:hover {
